# metaflow-argo-events

./: .pre-commit-config.yaml  LICENSE.txt  README.md  pyproject.toml
src/metaflow_argo_events/: __about__.py  __init__.py  cli.py  exceptions.py  logger.py  logging.py
src/metaflow_argo_events/cli/: __init__.py  console.py  format.py  main.py
src/metaflow_argo_events/models/: __init__.py  argo_events.py  auth.py  parameters.py
