[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "metaflow-argo-events"
dynamic = ["version"]
description = ''
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
  { name = "Bryan Galvin", email = "bcgalvin@gmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = []

[project.urls]
Documentation = "https://github.com/Bryan Galvin/metaflow-argo-events#readme"
Issues = "https://github.com/Bryan Galvin/metaflow-argo-events/issues"
Source = "https://github.com/Bryan Galvin/metaflow-argo-events"

[tool.hatch.version]
path = "src/metaflow_argo_events/__about__.py"

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/metaflow_argo_events tests}"

[tool.coverage.run]
source_pkgs = ["metaflow_argo_events", "tests"]
branch = true
parallel = true
omit = [
  "src/metaflow_argo_events/__about__.py",
]

[tool.coverage.paths]
metaflow_argo_events = ["src/metaflow_argo_events", "*/metaflow-argo-events/src/metaflow_argo_events"]
tests = ["tests", "*/metaflow-argo-events/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
